added registration, logout, encryption password andvalidator