@@ -1,17 +1,19 @@
 package com.owl.spring.boot_security.demo.Service;
 
-import com.owl.spring.boot_security.demo.DAO.MyDAO;
+import com.owl.spring.boot_security.demo.DAO.UserDAO;
 import com.owl.spring.boot_security.demo.Models.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.List;
 
+@Service
 public class UserServiceImpl implements UserService{
 
-    private final MyDAO userDAO;
+    private final UserDAO userDAO;
 
-    public UserServiceImpl(MyDAO userDAO) {
+    public UserServiceImpl(UserDAO userDAO) {
         this.userDAO = userDAO;
     }
 
@@ -46,6 +48,11 @@ public class UserServiceImpl implements UserService{
     }
 
     @Override
+    public List<User> findByUsername(String username) {
+        return userDAO.findByUsername(username);
+    }
+
+    @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         List<User> users = userDAO.findByUsername(username);
 
@@ -53,6 +60,6 @@ public class UserServiceImpl implements UserService{
             throw new UsernameNotFoundException("Incorrect username");
         }
 
-        return users.getFirst();
+        return users.get(0);
     }
 }
